@@ -1,3 +1,4 @@
+	* introduced a mechanism to be lighter on the disk when checking torrents
 	* applied temporary memory storage optimization to when checking
 	  a torrent as well
 	* removed hash_for_slot() from storage_interface. It is now implemented
